apps/zigbee2mqtt/zigbee2mqtt-sonoff.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt-sonoff
  namespace: zigbee2mqtt
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt-sonoff
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt-sonoff
      namespace: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt-sonoff
          image: koenkk/zigbee2mqtt:2.1.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: zigbee2mqtt-data
              mountPath: /data
            - name: zigbee2mqtt-sonoff-config
              mountPath: /data/configuration.yaml
              subPath: configuration.yaml
              readOnly: true
            - name: zigbee2mqtt-secrets
              mountPath: /data/secrets.yaml
              subPath: secrets.yaml
              readOnly: true
            - name: zigbee2mqtt-udev
              mountPath: /run/udev
            - name: ttyacm
              mountPath: /dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_4c99765bc59ded118ec0dba5a7669f5d-if00-port0
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-sonoff-pvc
        - name: zigbee2mqtt-udev
          hostPath:
            path: /run/udev
        - name: ttyacm
          hostPath:
            path: /dev/serial/by-id/usb-ITead_Sonoff_Zigbee_3.0_USB_Dongle_Plus_4c99765bc59ded118ec0dba5a7669f5d-if00-port0
            type: CharDevice
        - name: zigbee2mqtt-sonoff-config
          configMap:
            name: zigbee2mqtt-sonoff-config
        - name: zigbee2mqtt-secrets
          secret:
            secretName: zigbee2mqtt-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt-sonoff
  namespace: zigbee2mqtt
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    app: zigbee2mqtt-sonoff
  ports:
    - name: zigbee2mqtt-sonoff
      port: 8080
      targetPort: http
      protocol: TCP
