apps/zigbee2mqtt/zigbee2mqtt-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - &slzb-host slzb.internal.tmem.de
      secretName: zigbee2mqtt-tls
  rules:
    - host: *slzb-host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt-slzb
                port:
                  number: 8080
